--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "element-ui": "^2.13.2",
     "font-awesome": "^4.7.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.4.7"
+    "vue-router": "^3.4.7",
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
